--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,12 @@
   </head>
 
   <body>
+  <nav>
+    <%= link_to 'Consoles', consoles_path %> |
+<!--    <%#= link_to 'Games', games_path %> |-->
+<!--    <%#= link_to 'Subscriptions', subscriptions_path %> |-->
+    <%= link_to 'Accounts', accounts_path %> |
+  </nav>
     <%= yield %>
   </body>
 </html>
