--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
   <body>
   <nav>
     <%= link_to 'Consoles', consoles_path %> |
-<!--    <%#= link_to 'Games', games_path %> |-->
+    <%= link_to 'Games', games_path %> |
 <!--    <%#= link_to 'Subscriptions', subscriptions_path %> |-->
     <%= link_to 'Accounts', accounts_path %> |
   </nav>
