--- a/app/views/accounts/_account.html.erb
+++ b/app/views/accounts/_account.html.erb
@@ -6,12 +6,12 @@
 
   <p>
     <strong>Kind:</strong>
-    <%= account.kind %>
+    <%= account.kind.titleize %>
   </p>
 
   <p>
     <strong>Console:</strong>
-    <%= account.console_id %>
+    <%= account.console %>
   </p>
 
   <h2>Games:</h2>
