--- a/app/views/games/_game.html.erb
+++ b/app/views/games/_game.html.erb
@@ -6,7 +6,7 @@
 
   <p>
     <strong>Console type:</strong>
-    <%= game.console_type %>
+    <%= game.console_type.titleize %>
   </p>
 
   <h2>Accounts that own this game:</h2>
