--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,8 +14,8 @@
   <nav>
     <%= link_to 'Consoles', consoles_path %> |
     <%= link_to 'Games', games_path %> |
-<!--    <%#= link_to 'Subscriptions', subscriptions_path %> |-->
     <%= link_to 'Accounts', accounts_path %> |
+    <%= link_to 'Subscriptions', subscriptions_path %>
   </nav>
     <%= yield %>
   </body>
