--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,8 @@
     <%= link_to 'Consoles', consoles_path %> |
     <%= link_to 'Games', games_path %> |
     <%= link_to 'Accounts', accounts_path %> |
-    <%= link_to 'Subscriptions', subscriptions_path %>
+    <%= link_to 'Subscriptions', subscriptions_path %> |
+    <%= link_to 'Rentals', rentals_path %>
   </nav>
     <%= yield %>
   </body>
