--- a/app/views/subscriptions/_subscription.html.erb
+++ b/app/views/subscriptions/_subscription.html.erb
@@ -1,4 +1,4 @@
-<div id="<%= dom_id subscription %>">
+<div id="<%= dom_id subscription %>" class="card">
   <p>
     <strong>Kind:</strong>
     <%= subscription.kind.titleize %>
