--- a/app/views/subscriptions/_subscription.html.erb
+++ b/app/views/subscriptions/_subscription.html.erb
@@ -1,7 +1,7 @@
 <div id="<%= dom_id subscription %>" class="card">
   <p>
     <strong>Kind:</strong>
-    <%= subscription.kind.titleize %>
+    <%= subscription.kind %>
   </p>
 
   <p>
