--- a/app/views/consoles/_console.html.erb
+++ b/app/views/consoles/_console.html.erb
@@ -1,7 +1,7 @@
 <div id="<%= dom_id console %>" class="card">
 
   <p>
-    <strong>Name:</strong>
+    <strong>Console:</strong>
     <%= console.name %>
   </p>
 
